feat(client): add read-only doctor command (#896)